# webstar

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  webstar.sln  webstar.vcxproj  webstar.vcxproj.filters
web/: index.html  introduction.html  register.html
web/BlogPostAssets/images/_notes/: dwsync.xml
web/BlogPostAssets/styles/: blogPostStyle.css
web/BlogPostAssets/styles/_notes/: dwsync.xml
web/_notes/: dwsync.xml
web/css/: htmleaf-demo.css
web/css/_notes/: dwsync.xml
web/fonts/_notes/: dwsync.xml
web/images/_notes/: dwsync.xml
web/js/_notes/: dwsync.xml
web/static/: index.html
web/static/BlogPostAssets/images/_notes/: dwsync.xml
web/static/BlogPostAssets/styles/: blogPostStyle.css
web/static/BlogPostAssets/styles/_notes/: dwsync.xml
web/static/_notes/: dwsync.xml
web/static/images/_notes/: dwsync.xml
